# ripgrep-weechat

./: Cargo.toml  LICENSE  Makefile  README.md
src/: buffer.rs  lib.rs
