[package]
name = "weechat-ripgrep"
version = "0.1.0"
authors = ["Damir Jelić <poljar@termina.org.uk>"]
edition = "2018"

[lib]
name = "ripgrep"
crate-type = ["dylib"]

[dependencies]
libc = "0.2.69"

grep-searcher = "0.1.7"
grep-matcher = "0.1.4"
grep-regex = "0.1.7"

tokio = { version = "0.2.20", features = [ "rt-threaded", "sync" ] }
weechat-sys = { path = "/home/poljar/werk/misc/rust-weechat/weechat-sys" }
async-trait = "0.1.30"

[dependencies.weechat]
path = "/home/poljar/werk/misc/rust-weechat/weechat-rs"
features = ["async-executor"]

[dependencies.clap]
version = "2.33.0"
default-features = false
features = [ "suggestions" ]
